[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/bluecoin.png" type="Texture" id=1]
[ext_resource path="res://power_up1.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 70, 70 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 70, 0, 70, 70 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 140, 0, 70, 70 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 210, 0, 70, 70 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 280, 0, 70, 70 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 350, 0, 70, 70 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 36.0

[node name="power_up1" type="Area2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
